--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "graphql": "^16.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gen": "graphql-codegen --config codegen.yml",
+    "gen:watch": "graphql-codegen --config codegen.yml --watch \"src/**/*.graphql\""
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +47,13 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.5.0"
+    "@graphql-codegen/cli": "2.5.0",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-operations": "2.2.4",
+    "@graphql-codegen/typescript-react-apollo": "3.2.5",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
